# .dotfiles

./: .gitignore  .gitmodules  Brewfile  Makefile  README.md  installed-packages.txt  justfile  pyproject.toml  requirements.txt
.Trash/mutt/neomutt/: .mailcap
.Trash/ruby/: gems.sh
.github/: copilot-instructions.md
HARDWARE/GK6X/: README.md
HOME/: .bash_profile  .bashrc  .gitconfig  .profile  .tmux.conf  .zshrc  0.gitconfig
HOME/.config/brewfile/: Brewfile
HOME/.gnupg/: gpg-agent.conf
HOME/.newsboat/: cache.db  urls
HOME/.zsh/: .p10k_osx.zsh  .zshrc  dockerunf.zsh  functions.zsh
HOME/0.gnupg/: .gitignore
OS/osx/: .macos  Brewfile  Brewfile_2026_04  Brewfile_private  Brewfile_work  Dracula.terminal  applications.sh  duti.sh
alacritty/: alacritty.toml  alacritty_linux.toml  alacritty_osx.toml  alacritty_wsl.toml  keybindings_osx.toml  keybindings_wsl.toml  shell_linux.toml  shell_osx.toml  shell_wsl.toml  window_osx.toml  window_wsl.toml
brave/: stylus.json  vimium-options.json
extensions/brave-notes-tags-extension/: README.md  manifest.json  note.css  note.html  note.js  popup.css  popup.html  popup.js
fonts/: README.md
scripts/: pass-wrapper  pinentry-wrapper  spotifyd-wrapper  spt-wrapper  tmux-wrapper  w3m-wrapper
src/: detect_os  gpg-connect-agent-wrapper  jira-worktree  keep_alive  kill_music  repl-inspect-viewer  repl-json-viewer  repl-table-viewer  repl-vars  repl-vars-hook.R  repl-vars-hook.py  review  review2  symlinks  ticket  tmux-cheatsheets  tmux-shells  todo  todos  workup
tests/: test_review.py  test_todo.py  test_todos.py
(+74 files in other folders)
