[tool.poetry]
name = ".dotfiles"
version = "0.1.0"
description = "Configuration files and dependencies for various applications."
authors = ["Aleksej Chaichan <alex.mailme.@icloud.com>"]

[tool.poetry.dependencies]
python = "3.11.6"

# Common dependencies
requests = "*"

[tool.poetry.group.neovim.dependencies]
neovim = "*"

[tool.poetry.group.qutebrowser.dependencies]
requests = "*"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

